--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,8 @@
-{}
+{
+  "extends": "@tsconfig/node20/tsconfig.json",
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "es2022",
+    "lib": ["es2021", "DOM", "DOM.Iterable"]
+  }
+}
