--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,32 +7,33 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@cloudscape-design/browser-test-tools": "^3.0.55",
     "@custom-elements-manifest/analyzer": "^0.10.2",
     "@open-wc/testing": "^4.0.0",
-    "@cloudscape-design/browser-test-tools": "^3.0.0",
-    "@types/jest": "^28.1.8",
-    "@types/lodash": "^4.14.184",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "vite": "^5.2.8"
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.5",
+    "@types/node": "^20.14.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "vite": "^5.3.1"
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "@cloudscape-design/components": "^3.0.662",
+    "@cloudscape-design/board-components": "^3.0.63",
+    "@cloudscape-design/code-view": "^3.0.16",
+    "@cloudscape-design/collection-hooks": "^1.0.47",
+    "@cloudscape-design/component-toolkit": "1.0.0-beta.49",
+    "@cloudscape-design/components": "^3.0.663",
+    "@cloudscape-design/design-tokens": "^3.0.37",
     "@cloudscape-design/global-styles": "^1.0.27",
-    "@cloudscape-design/board-components": "^3.0.0",
-    "@cloudscape-design/code-view": "^3.0.5",
-    "@cloudscape-design/collection-hooks": "^1.0.0",
-    "@cloudscape-design/component-toolkit": "^1.0.0-beta",
-    "@cloudscape-design/design-tokens": "^3.0.0",
-    "@cloudscape-design/test-utils-core": "^1.0.0",
-    "@cloudscape-design/theming-runtime": "^1.0.0",
+    "@cloudscape-design/test-utils-core": "^1.0.32",
+    "@cloudscape-design/theming-runtime": "^1.0.50",
+    "@evonytkrtips/functions": "workspace:*",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.54.5",
-    "sass-loader": "^13.0.2",
-    "require-esm-in-cjs": "^0.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "require-esm-in-cjs": "^0.1.0",
+    "sass": "^1.77.6",
+    "sass-loader": "^14.2.1"
   }
 }
