--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,12 @@
     "target": "esnext",
     "module": "es2022",
     "lib": ["es2021", "DOM", "DOM.Iterable"]
+  },
+  "baseUrl": ".",
+  "paths": {
+    "@core": "packages/core",
+    "@frontend": "packages/frontend",
+    "@functions": "packages/functions",
+    "@scripts": "packages/scripts"
   }
 }
