feat: Add in Washington Prime and Totila data
the conflict data is sketchy

--- a/src/content/generalConflictData/mt1a.yml
+++ b/src/content/generalConflictData/mt1a.yml
@@ -4,6 +4,7 @@ members:
   - Barbarossa
 others:
   - André Masséna
+  - Washington Prime
   - Lysander
   - Gaius Octavius
   - Bertrand du Guesclin
