--- a/src/EvonyPerl/.gitignore
+++ b/src/EvonyPerl/.gitignore
@@ -1,5 +1,18 @@
+Makefile
+Makefile.old
 Build
-MYMETA.json
-MYMETA.yml
-_build
-blib
+Build.bat
+META.*
+MYMETA.*
+.build/
+_build/
+cover_db/
+blib/
+inc/
+.lwpcookies
+.last_cover_stats
+nytprof.out
+pod2htm*.tmp
+pm_to_blib
+Game::Evony-*
+Game::Evony-*.tar.gz
