feat: perl scaffoloding
this version builds, though it does not actually include everything correctly yet

--- a/src/EvonyPerl/dist.ini
+++ b/src/EvonyPerl/dist.ini
@@ -1,22 +1,22 @@
-name  = Game-Evony
+name    = Game-Evony
 author  = Luke Schierer <luke@schierer.org>
 license = CC_BY_NC_4_0
 copyright_holder = Luke Schierer
-
-[AutoVersion]
+copyright_year   = 2024
 
 [@Basic]
+[NextRelease]
 [@Git]
 [Git::NextVersion]
 first_version = 0.001
 
-# testing for release worthy code
+; testing for release worthy code
 [Test::Perl::Critic]
 [PodCoverageTests]
 [PodSyntaxTests]
 
-# auto detect dependencies based on what I use
+; auto detect dependencies based on what I use
 [AutoPrereqs]
 
-# auto docs in modules
+;auto docs in modules
 [PodWeaver]
