feat: perl scaffolding
I will not be pushing to cpan any time soon if ever

--- a/src/EvonyPerl/dist.ini
+++ b/src/EvonyPerl/dist.ini
@@ -4,7 +4,13 @@ license = CC_BY_NC_4_0
 copyright_holder = Luke Schierer
 copyright_year   = 2024
 
-[@Basic]
+
+
+[@Filter]
+bundle = @Basic
+remove = UploadToCPAN
+remove = ConfirmRelease
+[PkgVersion]
 [NextRelease]
 [@Git]
 [Git::NextVersion]
