--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "incremental": true,
-    "declaration": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "types": ["@types/node"],
     "noEmit": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "allowJs": true
   },
-  "references": [
-    {
-      "path": "./packages/frontend"
-    }
+  "extends": "./tsconfig.base.json",
+  "include": [
+    "sst.config.ts",
+    "sst-env.d.ts",
+    "commitlint.config.js",
+    "eslint.config.js"
   ]
 }
