--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,28 +1,25 @@
 {
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
     "useDefineForClassFields": true,
-    "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-    "esModuleInterop": true,
     "incremental": true,
     "declaration": true,
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
 
     /* Linting */
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
   "references": [
     {
       "path": "./packages/frontend"
+    },
+    {
+      "path": "./packages/generals"
     }
   ]
 }
