--- a/packages/frontend/tsconfig.build.json
+++ b/packages/frontend/tsconfig.build.json
@@ -1,10 +1,15 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
-    "outDir": "./lib",
-    "rootDir": "./src",
-    "resolveJsonModule": true
-  },
-  "include": ["src"],
+    "lib": ["ESNext", "DOM"],
+    "target": "ES2020",
+    "module": "ES2020",
+    "sourceMap": true,
+    "declaration": true,
+    "incremental": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "noErrorTruncation": true,
+    "strict": true
+  }
 }
