--- a/packages/frontend/tsconfig.build.json
+++ b/packages/frontend/tsconfig.build.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
     "target": "ES2020",
-    "module": "ES2020",
+    "module": "ESNext",
     "sourceMap": true,
     "declaration": true,
     "incremental": true,
