fix: allow toplevel await

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
+    "module": "esnext",
     "outDir": "lib",
     "rootDir": "src",
     "composite": true
