fix: more consistent with how mojojs is developed

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/mime-types": "^2.1.0",
     "@types/node": "^20.0.0",
     "@types/nopt": "^3.0.29",
+    "@types/nunjucks": "^3.2.6",
     "@types/react": "^18.2.37",
     "@types/stack-utils": "^2.0.1",
     "@types/tough-cookie": "^4.0.2",
