--- a/packages/frontend/tsconfig.build.json
+++ b/packages/frontend/tsconfig.build.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "node16",
     "sourceMap": true,
     "declaration": true,
     "incremental": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "noErrorTruncation": true,
     "strict": true
