--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,7 +17,8 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "iconify-icon": "^2.1.0",
-    "mojo-plugin-nunjucks": "^1.0.4"
+    "mojo-plugin-nunjucks": "^1.0.4",
+    "nunjucks-markdown": "^2.0.1"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.0",
