--- a/packages/frontend/tsconfig.eslint.json
+++ b/packages/frontend/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
-  "extends": "./tsconfig.build.json",
+  "extends": "../../tsconfig.base.json",
   "include": ["benchmarks/**/*", "bin/**/*", "examples/**/*", "src/**/*", "test/**/*", "test/**/*.*.js"]
 }
