--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@gracile/gracile": "0.1.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "iconify-icon": "^2.1.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
+    "sass": "^1.77.6",
     "typescript": "5.5.3"
   }
 }
