fix: attempt at module paths

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,3 +1,13 @@
 {
   "extends": "@gracile/gracile/tsconfigs/strictest",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": [
+    "gracile.config.ts",
+    "src/**/*.ts"
+  ]
 }
