feat: perl scaffolding
had to shift to the https://dzil.org/tutorial/ as the other is
unfinished

--- a/packages/Game-EvonyTKR/dist.ini
+++ b/packages/Game-EvonyTKR/dist.ini
@@ -4,9 +4,29 @@ license = CC_BY_4_0
 copyright_holder = Luke Schierer
 copyright_year   = 2024
 
-version = 0.001
+[Git::NextVersion]
+first_version = 0.001
 
-[@Starter]
+[Git::Contributors]
+path = packages/Game-EvonyTKR
+
+[@Filter]
+bundle = @Starter::Git
+remove = UploadToCPAN
+revision = 5
+managed_versions = 1
+commit_msg = "fix: %v%n%n%c"
+
+[PodWeaver]
+
 [ReadmeAnyFromPod]
 type = markdown
 filename = README.md
+
+[PodCoverageTests]
+;[Test::Kwalitee]
+[MojibakeTests]
+[Test::Perl::Critic]
+
+[AutoPrereqs]
+
