feat: shared file for data
with the first shared file

--- a/packages/Game-EvonyTKR/dist.ini
+++ b/packages/Game-EvonyTKR/dist.ini
@@ -10,12 +10,15 @@ first_version = 0.001
 [Git::Contributors]
 path = packages/Game-EvonyTKR
 
+[MinimumPerl]   ; determine minimum perl version
+
 [@Filter]
 bundle = @Starter::Git
 remove = UploadToCPAN
 revision = 5
 managed_versions = 1
 commit_msg = "fix: %v%n%n%c"
+dir = share
 
 [PodWeaver]
 
