feat: buff module
passing all current tests;

* not testing negative cases yet
* not using the Buff::Value module in the Buff module yet

--- a/packages/Game-EvonyTKR/dist.ini
+++ b/packages/Game-EvonyTKR/dist.ini
@@ -26,7 +26,11 @@ dir = share
 type = markdown
 filename = README.md
 
-[PodCoverageTests]
+;[PodCoverageTests]
+; while I would love to force myself to write docs, 
+; PodCoverage is not at all compatible with the perlclass feature
+; and I am already forcing myself to learn too much to take on 
+; figuring out how to make them work together at this time.  
 ;[Test::Kwalitee]
 [MojibakeTests]
 [Test::Perl::Critic]
