test: turn on kwalitee
I seem to pass these, and while I don't forsee releasing this, it doesn't hurt to check

--- a/packages/Game-EvonyTKR/dist.ini
+++ b/packages/Game-EvonyTKR/dist.ini
@@ -31,7 +31,7 @@ filename = README.md
 ; PodCoverage is not at all compatible with the perlclass feature
 ; and I am already forcing myself to learn too much to take on 
 ; figuring out how to make them work together at this time.  
-;[Test::Kwalitee]
+[Test::Kwalitee]
 [MojibakeTests]
 [Test::Perl::Critic]
 
