fix: something requiring the v# format for versions

--- a/packages/Game-EvonyTKR/dist.ini
+++ b/packages/Game-EvonyTKR/dist.ini
@@ -5,12 +5,14 @@ copyright_holder = Luke Schierer
 copyright_year   = 2024
 
 [Git::NextVersion]
-first_version = 0.001
+first_version = v0.001
 
 [Git::Contributors]
 path = packages/Game-EvonyTKR
 
 [MinimumPerl]   ; determine minimum perl version
+
+[ExplicitPackageForClass] ; https://metacpan.org/pod/Dist::Zilla::Plugin::ExplicitPackageForClass
 
 [@Filter]
 bundle = @Starter::Git
@@ -19,6 +21,8 @@ revision = 5
 managed_versions = 1
 commit_msg = "fix: %v%n%n%c"
 dir = share
+tag_format  = v%V
+tag_message = v%V 
 
 [PodWeaver]
 
