--- a/packages/Game-EvonyTKR/dist.ini
+++ b/packages/Game-EvonyTKR/dist.ini
@@ -5,7 +5,10 @@ copyright_holder = Luke Schierer
 copyright_year   = 2024
 
 [Git::NextVersion]
-first_version = v0.001
+first_version = v0.01.0
+version_by_branch = 1
+tag_format  = v%V
+tag_message = v%V 
 
 [Git::Contributors]
 path = packages/Game-EvonyTKR
@@ -21,8 +24,7 @@ revision = 5
 managed_versions = 1
 commit_msg = "fix: %v%n%n%c"
 dir = share
-tag_format  = v%V
-tag_message = v%V 
+
 
 [PodWeaver]
 
