feat: general data
generals can only have one built in book

--- a/packages/Game-EvonyTKR/share/generals/Elektra (Dragon God).yaml
+++ b/packages/Game-EvonyTKR/share/generals/Elektra (Dragon God).yaml
@@ -13,9 +13,10 @@ general:
   stars: '5red'
   level: '1'
   score_as: Archers
+  extra:
+    - Dragon God - Elektra
   books:
     - Blood Restrain
-    - Dragon God - Elektra
   ascending: true
   specialities:
     - Ranged Troop Assault
