--- a/packages/Game-EvonyTKR/share/generals/Douglas (Odyssey).yaml
+++ b/packages/Game-EvonyTKR/share/generals/Douglas (Odyssey).yaml
@@ -13,8 +13,9 @@ general:
   stars: '5red'
   level: '1'
   score_as: Archers
-  books:
+  extra:
     - Odyssey - Douglas
+  books:
     - Blessing of Siren
   specialities:
     - Ranged Troop Assault
